setting up stats filtering

--- a/client/src/app/views/welcome/welcome.component.html
+++ b/client/src/app/views/welcome/welcome.component.html
@@ -28,7 +28,7 @@
           nzSize="small"
           *nzSpaceItem>
           <ng-template #statsRadioGroup>
-            <nz-radio-group [(ngModel)]="statsFilter"
+            <nz-radio-group [(ngModel)]="statsType"
               nzSize="small">
               <label nz-radio-button
                 nzValue="Total">Total</label>
@@ -42,45 +42,45 @@
           </ng-template>
           <nz-row nzGutter="8">
             <nz-col nzFlex="1">
-              <nz-statistic [nzTitle]="statsFilter + ' Assertions'"
+              <nz-statistic [nzTitle]="statsType + ' Assertions'"
                 [nzValue]="(41 | number)!"></nz-statistic>
             </nz-col>
             <nz-col nzFlex="1">
-              <nz-statistic [nzTitle]="statsFilter + ' Genes'"
+              <nz-statistic [nzTitle]="statsType + ' Genes'"
                 [nzValue]="(461 | number)!"></nz-statistic>
             </nz-col>
             <nz-col nzFlex="1">
-              <nz-statistic [nzTitle]="statsFilter + ' Variants'"
+              <nz-statistic [nzTitle]="statsType + ' Variants'"
                 [nzValue]="(3031 | number)!"></nz-statistic>
             </nz-col>
             <nz-col nzFlex="1">
-              <nz-statistic [nzTitle]="statsFilter + ' Evidence'"
+              <nz-statistic [nzTitle]="statsType + ' Evidence'"
                 [nzValue]="(8553 | number)!"></nz-statistic>
             </nz-col>
             <nz-col nzFlex="1">
-              <nz-statistic [nzTitle]="statsFilter + ' Drugs'"
+              <nz-statistic [nzTitle]="statsType + ' Drugs'"
                 [nzValue]="(481 | number)!"></nz-statistic>
             </nz-col>
           </nz-row>
           <nz-row nzGutter="8">
             <nz-col nzFlex="1">
-              <nz-statistic [nzTitle]="statsFilter + ' Diseases'"
+              <nz-statistic [nzTitle]="statsType + ' Diseases'"
                 [nzValue]="(324 | number)!"></nz-statistic>
             </nz-col>
             <nz-col nzFlex="1">
-              <nz-statistic [nzTitle]="statsFilter + ' Publications'"
+              <nz-statistic [nzTitle]="statsType + ' Publications'"
                 [nzValue]="(3090 | number)!"></nz-statistic>
             </nz-col>
             <nz-col nzFlex="1">
-              <nz-statistic [nzTitle]="statsFilter + ' Revisions'"
+              <nz-statistic [nzTitle]="statsType + ' Revisions'"
                 [nzValue]="(12912 | number)!"></nz-statistic>
             </nz-col>
             <nz-col nzFlex="1">
-              <nz-statistic [nzTitle]="statsFilter + ' Contributors'"
+              <nz-statistic [nzTitle]="statsType + ' Contributors'"
                 [nzValue]="(312 | number)!"></nz-statistic>
             </nz-col>
             <nz-col nzFlex="1">
-              <nz-statistic [nzTitle]="statsFilter + ' Comments'"
+              <nz-statistic [nzTitle]="statsType + ' Comments'"
                 [nzValue]="(6709 | number)!"></nz-statistic>
             </nz-col>
 
@@ -159,7 +159,9 @@
   </nz-row>
   <nz-row *nzSpaceItem>
     <nz-col>
-      <ngx-json-viewer [json]="stats$ | ngrxPush"></ngx-json-viewer>
+      <nz-card>
+        <ngx-json-viewer [json]="stats$ | ngrxPush"></ngx-json-viewer>
+      </nz-card>
     </nz-col>
   </nz-row>
 </nz-space>
