--- a/client/src/app/forms/variants/forms/variant-revise/variant-revise.form.less
+++ b/client/src/app/forms/variants/forms/variant-revise/variant-revise.form.less
@@ -2,7 +2,7 @@
   display: block;
 }
 
-.form-helper-card ::ng-deep {
+nz-card:first-of-type ::ng-deep {
   // remove card body padding
   .ant-card-body {
     padding: 0;
