--- a/client/src/app/forms/shared/types/multi-field/multi-field.type.less
+++ b/client/src/app/forms/shared/types/multi-field/multi-field.type.less
@@ -1,14 +1,17 @@
 :host {
   display: block;
-  margin-bottom: 1em;
+}
+
+nz-form-item {
+  margin-bottom: 0.25em;
+}
+
+nz-form-item:last-child {
+  margin-bottom: 16px;
 }
 
 @btn-width: 24px;
 @btn-margin: 1em;
-
-.ant-form-item {
-  margin-bottom: .25em;
-}
 
 // class applied to row if field input displayed
 .field-display {
@@ -16,16 +19,18 @@
   margin-top: 0.5em;
 }
 
-// class applied to row if entity displayed
-.entity-display {}
+> nz-form-item {
+  margin-bottom: 0;
+}
 
 // container for field input
 .field-col {
   display: inline-block;
-  width: calc(~'100% - 2*(@{btn-width} + @{btn-margin})');
+  width: calc(~"100% - 2*(@{btn-width} + @{btn-margin})");
 }
 // containers for add/remove buttons
-.field-delete-btn, .field-add-btn {
+.field-delete-btn,
+.field-add-btn {
   display: inline-block;
   margin-left: @btn-margin;
   i {
@@ -41,5 +46,5 @@
 .field-cancel-btn {
   display: inline-block;
   margin-left: @btn-margin;
-  width: calc(~'(2*@{btn-width}) + @{btn-margin}');
+  width: calc(~"(2*@{btn-width}) + @{btn-margin}");
 }
