--- a/client/src/app/forms/shared/wrappers/form-info.wrapper.html
+++ b/client/src/app/forms/shared/wrappers/form-info.wrapper.html
@@ -1,2 +1,10 @@
 <p>form-info.wrapper</p>
 <ng-container #fieldComponent></ng-container>
+<!-- <nz-row>
+     <nz-col>
+     <ng-container #fieldComponent></ng-container>
+     </nz-col>
+     <nz-col>
+     <cvc-form-info-card></cvc-form-info-card>
+     </nz-col>
+     </nz-row> -->
