--- a/client/src/app/forms/shared/wrappers/form-info.wrapper.html
+++ b/client/src/app/forms/shared/wrappers/form-info.wrapper.html
@@ -1,5 +1,13 @@
-<p>form-info.wrapper</p>
-<ng-container #fieldComponent></ng-container>
+<nz-row nzGutter="16">
+  <nz-col [nzSpan]="16">
+    <nz-card [nzTitle]="'Revision Submission Form'" nzSize="small">
+      <ng-container #fieldComponent></ng-container>
+    </nz-card>
+  </nz-col>
+  <nz-col [nzSpan]="8">
+    <cvc-form-info-card [fieldGroup]="field.fieldGroup"></cvc-form-info-card>
+  </nz-col>
+</nz-row>
 <!-- <nz-row>
      <nz-col>
      <ng-container #fieldComponent></ng-container>
