--- a/client/src/app/forms/shared/components/form-info-card/form-info-card.component.less
+++ b/client/src/app/forms/shared/components/form-info-card/form-info-card.component.less
@@ -1,3 +1,5 @@
+@import 'themes/global-variables.less';
+
 :host ::ng-deep {
   .ant-card-body {
     // remove card body padding
@@ -5,4 +7,11 @@
     // card title has a -1 bottom margin for some reason, partially occluding nz-description's top border
     margin-top: 1px;
   }
+}
+
+.help-text {
+  padding: 6px 8px;
+  border: 1px solid #EFEFEF;
+  background: white;
+  border-radius: 6px;
 }
