--- a/client/src/app/forms/shared/components/form-info-card/form-info-card.component.html
+++ b/client/src/app/forms/shared/components/form-info-card/form-info-card.component.html
@@ -12,7 +12,9 @@
           <div *ngIf="field.templateOptions?.helpText as helpText; else noHelpText"
             [innerHtml]="helpText"
             class="help-text"></div>
-          <ng-template #noHelpText><div class="help-text">Help not available for this field.</div></ng-template>
+          <ng-template #noHelpText>
+            <div class="help-text">Help not available for this field.</div>
+          </ng-template>
         </nz-collapse-panel>
         <ng-template #fieldStatus>
           <ng-container *ngIf="field.formControl!.statusChanges | ngrxPush as status">
@@ -20,7 +22,13 @@
               <i nz-icon
                 nzType="exclamation-circle"
                 nzTheme="twotone"
-                nzTwotoneColor="#f5222d"></i>
+                nzTwotoneColor="#f5222d"
+                nz-tooltip
+                [nzTooltipTitle]="errorTooltip"
+                nzTooltipColor="red"></i>
+              <ng-template #errorTooltip>
+                <formly-validation-message [field]="field"></formly-validation-message>
+              </ng-template>
             </ng-container>
           </ng-container>
         </ng-template>
