added size attribute to org-selector group

--- a/client/src/app/forms/shared/types/submit-button/submit-button.type.html
+++ b/client/src/app/forms/shared/types/submit-button/submit-button.type.html
@@ -1,10 +1,10 @@
 <cvc-form-buttons>
-  <cvc-org-selector-btn-group [(selectedOrg)]="selectedOrg">
+  <cvc-org-selector-btn-group [(selectedOrg)]="selectedOrg"
+    [nzSize]="to.submitSize">
     <button type="submit"
       nz-button
       cvcOrgSelectorBtn
       nzType="primary"
-      nzSize="small"
       [disabled]="!form.valid">
       {{ to.submitLabel }}
     </button>
