--- a/client/src/app/forms/shared/components/org-selector-btn-group/org-selector-btn-group.component.html
+++ b/client/src/app/forms/shared/components/org-selector-btn-group/org-selector-btn-group.component.html
@@ -9,7 +9,7 @@
 
   <!-- if multiple organizations, wrap in btn-group w/ selector btn -->
   <ng-container *ngIf="organizations.length > 1">
-    <nz-button-group [nzSize]="'small'">
+    <nz-button-group [nzSize]="nzSize">
 
       <ng-container *ngTemplateOutlet="submitButton"></ng-container>
 
