--- a/client/src/app/forms/variants/forms/variant-revise/variant-revise.form.html
+++ b/client/src/app/forms/variants/forms/variant-revise/variant-revise.form.html
@@ -23,33 +23,17 @@
     [model]="formModel"
     [options]="formOptions"
     (modelChange)="formModel = $event"></formly-form>
-  <!-- <nz-form-item *ngIf="!(submitSuccess$ | async)">
-       <nz-form-control>
-       <cvc-form-buttons>
-       <cvc-org-selector-btn-group [(selectedOrg)]="this.mostRecentOrg">
-       <button type="submit"
-       nz-button
-       cvcOrgSelectorBtn
-       nzType="primary"
-       nzSize="small"
-       [disabled]="!formGroup.valid">
-       Suggest Revision
-       </button>
-       </cvc-org-selector-btn-group>
-       </cvc-form-buttons>
-       </nz-form-control>
-       </nz-form-item> -->
 </form>
 
-<div nz-row>
-  <div nz-col nzSpan="12">
-    <ngx-json-viewer *ngIf="formGroup"
-      [json]="formGroup.value"></ngx-json-viewer>
-  </div>
-  <div nz-col nzSpan="12">
-    <h4>formModel</h4>
-    <p>To speed up form updates, comment out or remove this formModel debug block.</p>
-    <ngx-json-viewer *ngIf="formModel"
-      [json]="formModel"></ngx-json-viewer>
-  </div>
-</div>
+<!-- <div nz-row>
+     <div nz-col nzSpan="12">
+     <ngx-json-viewer *ngIf="formGroup"
+     [json]="formGroup.value"></ngx-json-viewer>
+     </div>
+     <div nz-col nzSpan="12">
+     <h4>formModel</h4>
+     <p>To speed up form updates, comment out or remove this formModel debug block.</p>
+     <ngx-json-viewer *ngIf="formModel"
+     [json]="formModel"></ngx-json-viewer>
+     </div>
+     </div> -->
