revise evidence form works w/ form-info wrapper

--- a/client/src/app/forms/shared/wrappers/form-info.wrapper.html
+++ b/client/src/app/forms/shared/wrappers/form-info.wrapper.html
@@ -1,6 +1,6 @@
 <nz-row nzGutter="16">
   <nz-col [nzSpan]="16">
-    <nz-card [nzTitle]="'Revision Submission Form'" nzSize="small">
+    <nz-card [nzTitle]="to.label" nzSize="small">
       <ng-container #fieldComponent></ng-container>
     </nz-card>
   </nz-col>
