fixed form-info-card jumping around when form height changes

--- a/client/src/app/forms/shared/wrappers/form-info.wrapper.html
+++ b/client/src/app/forms/shared/wrappers/form-info.wrapper.html
@@ -1,11 +1,15 @@
 <nz-row nzGutter="16">
   <nz-col [nzSpan]="16">
-    <nz-card [nzTitle]="to.label" nzSize="small">
+    <nz-card [nzTitle]="to.label"
+      nzSize="small">
       <ng-container #fieldComponent></ng-container>
     </nz-card>
   </nz-col>
-  <nz-col [nzSpan]="8" #infoCardContainer>
-    <cvc-form-info-card [fieldGroup]="field.fieldGroup" [affixTo]="infoCardContainer"></cvc-form-info-card>
+  <nz-col [nzSpan]="8">
+    <div #infoCardContainer>
+      <cvc-form-info-card [fieldGroup]="field.fieldGroup"
+        [affixTo]="infoCardContainer"></cvc-form-info-card>
+    </div>
   </nz-col>
 </nz-row>
 <!-- <nz-row>
