switch to larger card containers for form & form-info

--- a/client/src/app/forms/shared/components/form-info-card/form-info-card.component.html
+++ b/client/src/app/forms/shared/components/form-info-card/form-info-card.component.html
@@ -1,6 +1,6 @@
 <nz-affix [nzOffsetTop]="0" [nzTarget]="affixTo">
   <nz-card nzTitle="Form Assistant"
-    nzSize="small"
+    nzSize="default"
     class="form-helper-card">
     <nz-collapse [nzBordered]="false">
       <ng-container *ngFor="let field of fieldGroup">
