--- a/client/src/app/forms/shared/wrappers/form-info.wrapper.html
+++ b/client/src/app/forms/shared/wrappers/form-info.wrapper.html
@@ -1,7 +1,7 @@
 <nz-row nzGutter="16">
   <nz-col [nzSpan]="16">
     <nz-card [nzTitle]="to.label"
-      nzSize="small">
+      nzSize="default">
       <ng-container #fieldComponent></ng-container>
     </nz-card>
   </nz-col>
