--- a/client/src/app/components/revisions/revision-list/revision-list.component.html
+++ b/client/src/app/components/revisions/revision-list/revision-list.component.html
@@ -245,8 +245,8 @@
               </ng-template>
               <ng-template #validationPopoverContentTemplate>
                 <nz-space nzDirection="vertical">
-                  <cvc-comment-input [(comment)]="revisionComment"
-                    *nzSpaceItem></cvc-comment-input>
+                  <cvc-comment-input-form [(comment)]="revisionComment"
+                    *nzSpaceItem></cvc-comment-input-form>
                   <span *nzSpaceItem>
                     <nz-space>
                       <span *nzSpaceItem>
