--- a/client/src/app/forms/comment-add/comment-add.form.html
+++ b/client/src/app/forms/comment-add/comment-add.form.html
@@ -7,7 +7,7 @@
       <cvc-form-errors-alert [errors]="this.errorMessages">
       </cvc-form-errors-alert>
     </nz-form-item>
-    <cvc-comment-input [(comment)]="commentText"></cvc-comment-input>
+    <cvc-comment-input-form [(comment)]="commentText"></cvc-comment-input-form>
     <nz-spin nzTip="Submitting" [nzSpinning]="this.loading">
       <nz-form-item>
         <nz-form-control>
