--- a/client/src/app/forms/flag-resolve/flag-resolve.form.html
+++ b/client/src/app/forms/flag-resolve/flag-resolve.form.html
@@ -59,7 +59,7 @@
     <form nz-form
       (ngSubmit)="resolveFlag()"
       nzLayout="vertical">
-      <cvc-comment-input [(comment)]="comment"></cvc-comment-input>
+      <cvc-comment-input-form [(comment)]="comment"></cvc-comment-input-form>
       <nz-spin nzTip="Submitting" [nzSpinning]="this.loading">
         <nz-form-item>
           <nz-form-control>
