--- a/client/src/app/components/layout/viewer-button/viewer-button.component.html
+++ b/client/src/app/components/layout/viewer-button/viewer-button.component.html
@@ -74,6 +74,6 @@
   (nzOnCancel)="this.handleCoiModalCancel()">
   <ng-template #coiModalTitle><span>Update your Conflict of Interest Statement</span></ng-template>
   <ng-template #coiModalContent>
-    <cvc-update-coi (coiUpdatedEvent)="this.coiUpdated()"></cvc-update-coi>
+    <cvc-user-coi-form (coiUpdatedEvent)="this.coiUpdated()"></cvc-user-coi-form>
   </ng-template>
 </nz-modal>
