--- a/client/src/app/views/users/users-detail/users-detail.component.html
+++ b/client/src/app/views/users/users-detail/users-detail.component.html
@@ -189,8 +189,8 @@
     (nzOnCancel)="this.handleProfileModalCancel()">
     <ng-template #profileModalTitle><span>Update Profile</span></ng-template>
     <ng-template #profileModalContent>
-      <cvc-update-profile [user]="user"
-        (profileUpdatedEvent)="this.profileUpdated()"></cvc-update-profile>
+      <cvc-user-profile-form [user]="user"
+        (profileUpdatedEvent)="this.profileUpdated()"></cvc-user-profile-form>
     </ng-template>
   </nz-modal>
 </ng-container>
@@ -202,6 +202,6 @@
   (nzOnCancel)="this.handleCoiModalCancel()">
   <ng-template #coiModalTitle><span>Update your Conflict of Interest Statement</span></ng-template>
   <ng-template #coiModalContent>
-    <cvc-update-coi (coiUpdatedEvent)="this.coiUpdated()"></cvc-update-coi>
+    <cvc-user-coi-form (coiUpdatedEvent)="this.coiUpdated()"></cvc-user-coi-form>
   </ng-template>
 </nz-modal>
