clinical-significance implements its own select

--- a/client/src/app/forms/config/types/clinical-significance-select/clinical-significance-select.type.html
+++ b/client/src/app/forms/config/types/clinical-significance-select/clinical-significance-select.type.html
@@ -1,1 +1,21 @@
-<p>clinical-significance-select works!</p>
+<nz-select [class.ng-dirty]="showError"
+  [nzPlaceHolder]="to.placeholder ? to.placeholder : null"
+  [formControl]="formControl"
+  [formlyAttributes]="field"
+  [nzMode]="to.multiple ? 'multiple' : 'default'"
+  (ngModelChange)="to.change && to.change(field, $event)">
+  <ng-container *ngFor="let item of to.options | formlySelectOptions: field | async">
+    <nz-option-group *ngIf="item.group"
+      [nzLabel]="item.label">
+      <nz-option *ngFor="let child of item.group"
+        [nzValue]="child.value"
+        [nzDisabled]="child.disabled"
+        [nzLabel]="child.label">
+      </nz-option>
+    </nz-option-group>
+    <nz-option *ngIf="!item.group"
+      [nzValue]="item.value"
+      [nzDisabled]="item.disabled"
+      [nzLabel]="item.label"></nz-option>
+  </ng-container>
+</nz-select>
