multi-field now hides itself w/o destroying its formControl

--- a/client/src/app/forms/config/types/multi-field/multi-field.type.less
+++ b/client/src/app/forms/config/types/multi-field/multi-field.type.less
@@ -13,6 +13,11 @@ nz-form-item:last-child {
 @btn-width: 24px;
 @btn-margin: 1em;
 
+// applied if to.hidden true
+.hidden {
+  display: none;
+}
+
 // class applied to row if field input displayed
 .field-display {
   // provide a little margin between entity list & field input
