make frontend data releases component functional

--- a/client/src/app/components/shared/link-tag/link-tag.component.html
+++ b/client/src/app/components/shared/link-tag/link-tag.component.html
@@ -4,7 +4,7 @@
     [nzTooltipTitle]="tooltip"
     [nzTooltipTrigger]="tooltip ? 'hover' : null">
     <i nz-icon
-      nzType='link'
+      [nzType]='iconName ? iconName : "link"'
       nzTheme='outline'></i>
     <ng-content></ng-content>
   </nz-tag>
